# Football_Refree_Asst

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py  schemas.py
api/routes/: health.py  ingest.py  query.py
fastapi_app/: README.md  run.py
scripts/: build_index.py  download_pdf.py
src/agents/: __init__.py  tools.py
src/embeddings/: embedder.py
src/ingestion/: chunker.py  pdf_loader.py
src/llm/: llm_router.py
src/rag/: schemas.py  service.py
src/retrieval/: contextual_retriever.py
tests/: test_rag.py
