[project]
name = "ai-refree-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "groq>=0.30.0,<1.0.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.4.30",
    "openai>=2.6.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.42.0",
]
